--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
  cupertino_icons: ^1.0.2
  google_fonts: ^1.1.2
  carousel_slider: ^3.0.0
+ provider: ^5.0.0
+ http: ^0.13.1
 
 dev_dependencies:
  flutter_test:
